UI polish, new logo

--- a/src/components/Dropdown.astro
+++ b/src/components/Dropdown.astro
@@ -84,7 +84,7 @@ const { label, items } = Astro.props;
   }
 
   .dropdown-button:hover {
-    color: rgb(13, 148, 136);
+    color: #008C45;
   }
 
   .dropdown-arrow {
@@ -141,6 +141,6 @@ const { label, items } = Astro.props;
 
   .dropdown-item:hover {
     background-color: rgb(243, 244, 246);
-    color: rgb(13, 148, 136);
+    color: #008C45;
   }
 </style>
