--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -91,7 +91,7 @@ const base = getBaseUrl();
   }
 
   .logo a:hover {
-    color: #008C45;
+    color: #008c45;
   }
 
   .logo-text-container {
@@ -108,7 +108,7 @@ const base = getBaseUrl();
 
   .logo-portugal {
     font-size: 0.75rem;
-    color: #008C45;
+    color: #008c45;
     margin-top: -0.5rem;
   }
 
@@ -174,7 +174,7 @@ const base = getBaseUrl();
 
     .mobile-icon-button:hover,
     .mobile-icon-link:hover {
-      color: #008C45;
+      color: #008c45;
     }
 
     /* Mobile dropdown menu for calculators */
