--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -24,7 +24,7 @@ const isActive = href === pathname || href === '/' + (subpath?.[0] || '');
 		transition: color 0.2s;
 	}
 	a:hover {
-		color: #008C45;
+		color: var(--accent);
 	}
 	a.active {
 		text-decoration: underline;
