Improve SegSoc calculator; blog post img sizing

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -29,6 +29,8 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
         margin: 0 auto;
         border-radius: 8px;
         box-shadow: none !important;
+        max-height: 500px;
+        object-fit: cover;
       }
       .content-wrapper {
         background-color: rgb(243, 244, 246);
